# substrait-cpp

./: .gitmodules  CMakeLists.txt  asan.supp  sanitize-ignore-list.txt  ubsan.supp
export/planloader/: CMakeLists.txt  PlanLoader.java  planloader_jni.cpp
export/planloader/tests/: CMakeLists.txt
include/substrait/common/: Convert.h
src/substrait/common/: CMakeLists.txt  Convert.cpp  PlanTransformerTool.cpp
src/substrait/common/tests/: CMakeLists.txt  ConvertTest.cpp
src/substrait/textplan/: CMakeLists.txt  StructuredSymbolData.h  SymbolTable.cpp  SymbolTable.h
src/substrait/textplan/converter/: CMakeLists.txt  InitialPlanProtoVisitor.cpp  LoadBinary.cpp  LoadBinary.h  SaveBinary.cpp  SaveBinary.h
src/substrait/textplan/converter/data/: q6_first_stage.golden.splan  q6_first_stage.json
src/substrait/textplan/converter/tests/: BinaryToTextPlanConversionTest.cpp  CMakeLists.txt
src/substrait/textplan/fuzztests/: CMakeLists.txt  FuzzTest.cpp
src/substrait/textplan/parser/: SubstraitPlanRelationVisitor.cpp  SubstraitPlanTypeVisitor.cpp
src/substrait/textplan/tests/: CMakeLists.txt  RoundtripTest.cpp
substrait/: CMakeLists.txt
substrait/textplan/: CMakeLists.txt  PlanConverter.cpp  PlanConverter.h  SymbolTable.cpp  Tool.cpp
substrait/textplan/data/: tpch-plan04.json  tpch-plan21.json  tpch-plan22.json
substrait/textplan/tests/: BinaryToTextPlanConversionTest.cpp  CMakeLists.txt
